force-app/main/default/objects/Konteyner__c/fields/Karayolu_Varis__c.field-meta.xml
<CustomField>
    <fullName>Karayolu_Varis__c</fullName>
    <label>Karayolu Varis</label>
    <length>30</length>
    <type>Text</type>
</CustomField>