force-app/main/default/objects/Konteyner__c/fields/Konteyner_Cikis_Tarihi__c.field-meta.xml
<CustomField>
    <fullName>Konteyner_Cikis_Tarihi__c</fullName>
    <label>Konteyner Cikis Tarihi</label>
    <type>Date</type>
</CustomField>