force-app/main/default/objects/Konteyner__c/fields/Liman_Adi__c.field-meta.xml
<CustomField>
    <fullName>Liman_Adi__c</fullName>
    <label>Liman Adi</label>
    <length>30</length>
    <type>Text</type>
</CustomField>