force-app/main/default/objects/Konteyner__c/fields/total_cargo_in_container__c.field-meta.xml
<CustomField>
    <fullName>total_cargo_in_container__c</fullName>
    <inlineHelpText>Konteyner Icindeki Toplam Kargo Sayisi</inlineHelpText>
    <label>Total Cargo In Container</label>
    <summaryForeignKey>Kargo__c.Konteyner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>