force-app/main/default/objects/Konteyner__c/fields/Total_Value_of_Cargoes_Inside_The_Conta__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Cargoes_Inside_The_Conta__c</fullName>
    <inlineHelpText>Kargolarin Toplam Degerini Gosterir</inlineHelpText>
    <label>Total Value of Cargoes Inside The Conta</label>
    <summarizedField>Kargo__c.Currency__c</summarizedField>
    <summaryForeignKey>Kargo__c.Konteyner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>