force-app/main/default/objects/Konteyner__c/recordTypes/Deniz_Yolu_Isletmeleri.recordType-meta.xml
<RecordType>
    <fullName>Deniz_Yolu_Isletmeleri</fullName>
    <active>true</active>
    <label>Deniz Yolu Isletmeleri</label>
</RecordType>