force-app/main/default/objects/Konteyner__c/recordTypes/Hava_Yolu_Isletmeleri.recordType-meta.xml
<RecordType>
    <fullName>Hava_Yolu_Isletmeleri</fullName>
    <active>true</active>
    <label>Hava Yolu Isletmeleri</label>
</RecordType>