force-app/main/default/objects/Konteyner__c/recordTypes/Kara_Yolu_Isletmeleri.recordType-meta.xml
<RecordType>
    <fullName>Kara_Yolu_Isletmeleri</fullName>
    <active>true</active>
    <label>Kara Yolu Isletmeleri</label>
</RecordType>