force-app/main/default/objects/Konteyner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plaka__c</columns>
    <columns>Konteyner_Cikis_Tarihi__c</columns>
    <columns>total_cargo_in_container__c</columns>
    <columns>Total_Value_of_Cargoes_Inside_The_Conta__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>